--- a/app/views/shifts/new.html.haml
+++ b/app/views/shifts/new.html.haml
@@ -1,12 +1,44 @@
-%h1 Add a shift
+%nav.navbar.navbar-default
+	%div.container-fluid
+		%div.navbar-brand
+			%h1 VA hospital logo
+		%div.navbar-center
+			= hidden_field_tag @user = User.find_by_id(session[:user_id])
+			%h2.title= "Hello, #{@user.first_name} #{@user.last_name}"
+			%p= "You are logged in as #{@user.usertype} with FTE of #{@user.fte}"
+		%div.collapse.navbar-collapse
+			%ul.nav.navbar-nav.navbar-right
+				%li
+					%a.button.btn.btn-default.btn-lg.btn-link{title: "Account Settings", type: "button", href: "/settings"}
+						%span.glyphicon.glyphicon-cog
+				%li
+					%a.button.btn.btn-default.btn-lg.btn-link{title: "Log Out", type: "button", href: "/logout"}
+						%span.glyphicon.glyphicon-off
+			
+%div#wrapper
+	%div#sidebar-wrapper
+		%ul.sidebar-nav
+			%li
+				%a= link_to 'Home', home_path
+			%li
+				%a= link_to 'Set Availability', availabilities_path
+			- if @user.usertype == 'Administrator'
+				%li 
+					%a= link_to 'VA ER Scheduler', shifts_path
+				%li
+					%a= link_to 'Set FTE Multiplier', multiply_path
 
-= form_tag shifts_path do
+	%div#page-content-wrapper
+		%div.container-fluid 
+			%h1 Add a shift
 
-  = label :shift, :shiftstart, 'Start'
-  = datetime_select :shift, :shiftstart
+			= form_tag shifts_path do
 
-  = label :shift, :shiftend, 'End'
-  = datetime_select :shift, :shiftend
+				= label :shift, :shiftstart, 'Start'
+				= datetime_select :shift, :shiftstart
 
-  = submit_tag 'Save', :id => "save_submit"
+				= label :shift, :shiftend, 'End'
+				= datetime_select :shift, :shiftend
+
+				= submit_tag 'Save', :id => "save_submit"
 
