--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -19,9 +19,9 @@
 	%div#sidebar-wrapper
 		%ul.sidebar-nav
 			%li
+				%a= link_to 'Home', home_path
+			%li
 				%a= link_to 'Set Availability', availabilities_path
-			%li 
-				%a Calendar
 			- if @user.usertype == 'Administrator'
 				%li 
 					%a= link_to 'VA ER Scheduler', shifts_path
