--- a/app/views/shifts/show.html.haml
+++ b/app/views/shifts/show.html.haml
@@ -1,29 +1,61 @@
-%h2 shift details
+%nav.navbar.navbar-default
+	%div.container-fluid
+		%div.navbar-brand
+			%h1 VA hospital logo
+		%div.navbar-center
+			= hidden_field_tag @user = User.find_by_id(session[:user_id])
+			%h2.title= "Hello, #{@user.first_name} #{@user.last_name}"
+			%p= "You are logged in as #{@user.usertype} with FTE of #{@user.fte}"
+		%div.collapse.navbar-collapse
+			%ul.nav.navbar-nav.navbar-right
+				%li
+					%a.button.btn.btn-default.btn-lg.btn-link{title: "Account Settings", type: "button", href: "/settings"}
+						%span.glyphicon.glyphicon-cog
+				%li
+					%a.button.btn.btn-default.btn-lg.btn-link{title: "Log Out", type: "button", href: "/logout"}
+						%span.glyphicon.glyphicon-off
+			
+%div#wrapper
+	%div#sidebar-wrapper
+		%ul.sidebar-nav
+			%li
+				%a= link_to 'Home', home_path
+			%li
+				%a= link_to 'Set Availability', availabilities_path
+			- if @user.usertype == 'Administrator'
+				%li 
+					%a= link_to 'VA ER Scheduler', shifts_path
+				%li
+					%a= link_to 'Set FTE Multiplier', multiply_path
 
-%ul#details
-	%li
-		Start Time: 
-		= @shift.shiftstart
-	%li
-		End Time:
-		= @shift.shiftend
+	%div#page-content-wrapper
+		%div.container-fluid 
+			%h2 shift details
 
-	%li
-		Available People:
-		- if !@shift.users.nil?
-			= @shift.users.split(" ").map{|i| User.find(i).first_name}
+			%ul#details
+				%li
+					Start Time: 
+					= @shift.shiftstart
+				%li
+					End Time:
+					= @shift.shiftend
 
-	%li
-		Possible Users:
-		- if !@shift.possible_users.nil?
-			= @shift.possible_users.split(" ").map{|i| User.find(i).first_name}
-	
-	%li
-		Shift Assigned To:
-		=@shift.owner
-= link_to 'Edit', edit_shift_path(@shift)
-%br
-= button_to 'Delete', shift_path(@shift), :method => :delete, :confirm => 'Are you sure?'
-%br
+				%li
+					Available People:
+					- if !@shift.users.nil?
+						= @shift.users.split(" ").map{|i| User.find(i).first_name}
 
-= link_to 'Back to all shifts', shifts_path
+				%li
+					Possible Users:
+					- if !@shift.possible_users.nil?
+						= @shift.possible_users.split(" ").map{|i| User.find(i).first_name}
+				
+				%li
+					Shift Assigned To:
+					=@shift.owner
+			= link_to 'Edit', edit_shift_path(@shift)
+			%br
+			= button_to 'Delete', shift_path(@shift), :method => :delete, :confirm => 'Are you sure?'
+			%br
+
+			= link_to 'Back to all shifts', shifts_path
