--- a/app/views/availabilities/index.html.haml
+++ b/app/views/availabilities/index.html.haml
@@ -38,7 +38,7 @@
 			:css
 				tr {
 					vertical-align: top;
-					text-align: left;
+					text-align: center;
 				}
 
 			= form_tag 'update_availabilities', :method => :get do
