--- a/app/views/shifts/show.html.haml
+++ b/app/views/shifts/show.html.haml
@@ -57,3 +57,4 @@
 			%br
 			= button_to 'Delete', shift_path(@shift), :method => :delete, :confirm => 'Are you sure?'
 			%br
+			= link_to 'Back to all shifts', shifts_path
