--- a/app/views/shifts/edit.html.haml
+++ b/app/views/shifts/edit.html.haml
@@ -45,8 +45,8 @@
           = label :shift, :owner, 'Assign Person'
           - @temp1 = @shift.users.where(id: @shift.availabilities.select(:user_id).where(shift_id: @shift.id, availability: 2))
           - @temp2 = @shift.users.where(id: @shift.availabilities.select(:user_id).where(shift_id: @shift.id, availability: 1))
-          - @temp1.push(@temp2.flatten!)
-          = select("shift", "owner", @temp1.pluck(:first_name)  {|num| [User.find_by_id(num.to_i).first_name]}, {include_blank: true})
+          - @temp3 = @temp1 | @temp2
+          = select("shift", "owner", @temp3.map  {|num| [User.find_by_id(num).first_name]}, {include_blank: true})
         - else
           No Available Doctors to Assign for This Shift
           
