--- a/app/views/shifts/index.html.haml
+++ b/app/views/shifts/index.html.haml
@@ -38,7 +38,7 @@
 				}
 			%h1 ER Shifts
 
-			%h2 these are all the shifts currently in the shifts table
+			%h2 These are all the shifts currently in the shifts table
 
 			%table
 				%thead
@@ -62,7 +62,6 @@
 						%th available
 						%th potentially available
 						%th assigned person
-						%th open/closed
 						%th shift info
 						%th ingcal
 					%tbody
