--- a/app/views/availabilities/index.html.haml
+++ b/app/views/availabilities/index.html.haml
@@ -111,38 +111,38 @@
 												- else
 													%td= "#{shift.shiftstart.to_s[11..15]} to #{shift.shiftend.to_s[11..15]}+"
 
-			%h2 these are all the shifts currently in the shifts table
+			/ %h2 these are all the shifts currently in the shifts table
 
-			%table#shifts
-				%thead
-					%tr
-						%th starttime
-						%th endtime
-						%th available people
-						%th possibly available
-						%th assigned person
-						%th shift info
-					%tbody
-						- @shifts.each do |shift|
-							%tr
-								%td.shiftstart= shift.shiftstart
-								%td.shiftend= shift.shiftend
-								%td.shiftuser= shift.users.where(id: shift.availabilities.select(:user_id).where(shift_id: shift.id, availability: 2)).pluck(:last_name)
-								%td.possibleusers= shift.users.where(id: shift.availabilities.select(:user_id).where(shift_id: shift.id, availability: 1)).pluck(:last_name)
-								%td.owner= shift.owner
-								%td.details= link_to 'details', shift
+			/ %table#shifts
+			/ 	%thead
+			/ 		%tr
+			/ 			%th starttime
+			/ 			%th endtime
+			/ 			%th available people
+			/ 			%th possibly available
+			/ 			%th assigned person
+			/ 			%th shift info
+			/ 		%tbody
+			/ 			- @shifts.each do |shift|
+			/ 				%tr
+			/ 					%td.shiftstart= shift.shiftstart
+			/ 					%td.shiftend= shift.shiftend
+			/ 					%td.shiftuser= shift.users.where(id: shift.availabilities.select(:user_id).where(shift_id: shift.id, availability: 2)).pluck(:last_name)
+			/ 					%td.possibleusers= shift.users.where(id: shift.availabilities.select(:user_id).where(shift_id: shift.id, availability: 1)).pluck(:last_name)
+			/ 					%td.owner= shift.owner
+			/ 					%td.details= link_to 'details', shift
 
-			%h2 this is the availabilities table
+			/ %h2 this is the availabilities table
 
-			%table#availabilities
-				%thead
-					%tr
-						%th user_id
-						%th shift_id
-						%th availability
-					%tbody
-						- @availabilities.each do |a|
-							%tr
-								%td.user_id= a.user_id
-								%td.shift_id= a.shift_id
-								%td.availability= a.availability
+			/ %table#availabilities
+			/ 	%thead
+			/ 		%tr
+			/ 			%th user_id
+			/ 			%th shift_id
+			/ 			%th availability
+			/ 		%tbody
+			/ 			- @availabilities.each do |a|
+			/ 				%tr
+			/ 					%td.user_id= a.user_id
+			/ 					%td.shift_id= a.shift_id
+			/ 					%td.availability= a.availability
