--- a/app/views/shifts/index.html.haml
+++ b/app/views/shifts/index.html.haml
@@ -40,18 +40,19 @@
 
 			/ %h2 These are all the shifts currently in the shifts table
 
-			/ %table
-			/ 	%thead
-			/ 		%th Person
-			/ 		%th Hours Assigned
-			/ 		%th Hours Required
-			/ 	%tbody
-			/ 		- @hours_per_person.each do |person, hours|
-			/ 			%tr
-			/ 				- if person != '***' && person != "" && !person.nil?
-			/ 					%td= person
-			/ 					%td= hours[0]
-			/ 					%td= hours[1]
+			%table
+				%thead
+					%th Person
+					%th Hours Assigned
+					%th Hours Required
+				%tbody
+					- @hours_per_person.each do |person, hours|
+						%tr
+							- if person != '***' && person != "" && !person.nil?
+								%td= person
+								%td= hours[0]
+								%td= hours[1]
+			%br
 			/ <iframe src="https://www.google.com/calendar/embed?src=va.er.core.scheduler%40gmail.com&ctz=America/Los_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
 			/ %table#shifts
